# ChangeLog for dev-haskell/gtk2hs
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/gtk2hs/Attic/ChangeLog,v 1.39 2007/12/13 00:44:30 dcoutts Exp $

  12 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> gtk2hs-0.9.11.ebuild,
  gtk2hs-0.9.12.ebuild, gtk2hs-0.9.12.1.ebuild:
  Does not work with gtksourceview 2.x. Fixes bug #201210.

*gtk2hs-0.9.12.1 (10 Nov 2007)

  10 Nov 2007; Luis F. Araujo <araujo@gentoo.org> +gtk2hs-0.9.12.1.ebuild:
  Adding new version

  09 Nov 2007; Luis F. Araujo <araujo@gentoo.org> gtk2hs-0.9.12.ebuild:
  Adding missing backslash to fix package registration

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> gtk2hs-0.9.10-r1.ebuild:
  Drop virtual/ghc in favour of dev-lang/ghc

  29 Oct 2007; Luis F. Araujo <araujo@gentoo.org> gtk2hs-0.9.12.ebuild:
  Fix for recent glib that changes the type of the gtype typedef

  12 Oct 2007; Rémi Cardona <remi@gentoo.org> gtk2hs-0.9.10-r1.ebuild,
  gtk2hs-0.9.11.ebuild, gtk2hs-0.9.12.ebuild:
  update gtksourceview deps (see bug #195366)

*gtk2hs-0.9.12 (27 Jul 2007)

  27 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> gtk2hs-0.9.11.ebuild,
  +gtk2hs-0.9.12.ebuild:
  New version. Hopefully this fixes bug #144028.
  Also allow building with xulrunner.

  03 Jun 2007; Duncan Coutts <dcoutts@gentoo.org> gtk2hs-0.9.11.ebuild:
  Fix seamonkey build, should fix bug #180682.

  30 Apr 2007; Duncan Coutts <dcoutts@gentoo.org> gtk2hs-0.9.11.ebuild:
  Add missing dep on dev-haskell/mtl

  29 Apr 2007; Duncan Coutts <dcoutts@gentoo.org> -gtk2hs-0.9.9.ebuild,
  -gtk2hs-0.9.10.ebuild, gtk2hs-0.9.10-r1.ebuild:
  Remove old versions and fix deps for 0.9.10-r1

*gtk2hs-0.9.11 (29 Apr 2007)

  29 Apr 2007; Duncan Coutts <dcoutts@gentoo.org> +gtk2hs-0.9.11.ebuild:
  Added new version

  06 Jan 2007; Duncan Coutts <dcoutts@gentoo.org> gtk2hs-0.9.9.ebuild,
  gtk2hs-0.9.10.ebuild, gtk2hs-0.9.10-r1.ebuild: