@@ -25,18 +25,18 @@ EBUILD gtk2hs-0.9.11.ebuild 3091 RMD160 8397c203bf7372f564068b7fe8bc78db270f3869
 MD5 1a3e158eefa76c4803ad44a99de40d0b gtk2hs-0.9.11.ebuild 3091
 RMD160 8397c203bf7372f564068b7fe8bc78db270f3869 gtk2hs-0.9.11.ebuild 3091
 SHA256 39d1f561adfeab53a6973fcc9a9f6464eb61c0bd3d9622fa8000a607cc7b4f46 gtk2hs-0.9.11.ebuild 3091
-EBUILD gtk2hs-0.9.12.1.ebuild 3093 RMD160 acbcaa7e9bfab9f27b720d60673e1114abdc6a33 SHA1 1278b17244841dbab80212483c7f3ec870df166b SHA256 d58ae1fdd47bbe3aed9995c513c785b6d74c52a5eaed9c0a0157878bbfd304ea
-MD5 01d32a2645ee750a00ca8a97a50ca0c0 gtk2hs-0.9.12.1.ebuild 3093
-RMD160 acbcaa7e9bfab9f27b720d60673e1114abdc6a33 gtk2hs-0.9.12.1.ebuild 3093
-SHA256 d58ae1fdd47bbe3aed9995c513c785b6d74c52a5eaed9c0a0157878bbfd304ea gtk2hs-0.9.12.1.ebuild 3093
+EBUILD gtk2hs-0.9.12.1.ebuild 3091 RMD160 8ee8666dac93b74c4caaba26791ec40588db4c63 SHA1 656802ae9816b4816359f859f3c09fc717844378 SHA256 5c0788b64b863dc383b67f08b39b254a2cc6fcecf2921af648278dcd90a32efc
+MD5 6a73b1e57b88f14c6d7a6ec520d5699c gtk2hs-0.9.12.1.ebuild 3091
+RMD160 8ee8666dac93b74c4caaba26791ec40588db4c63 gtk2hs-0.9.12.1.ebuild 3091
+SHA256 5c0788b64b863dc383b67f08b39b254a2cc6fcecf2921af648278dcd90a32efc gtk2hs-0.9.12.1.ebuild 3091
 EBUILD gtk2hs-0.9.12.ebuild 3321 RMD160 396f60d21788a6e8716976843203ae1ce21e7fa8 SHA1 42c5568a9599ed4727d4d1af6cabaf57282effd4 SHA256 a40f4bef73afb7d9b806346f85fc2fbd7caeff8aa505c9edf854239de525b160
 MD5 3829a933b36cf282b0344b0700141452 gtk2hs-0.9.12.ebuild 3321
 RMD160 396f60d21788a6e8716976843203ae1ce21e7fa8 gtk2hs-0.9.12.ebuild 3321
 SHA256 a40f4bef73afb7d9b806346f85fc2fbd7caeff8aa505c9edf854239de525b160 gtk2hs-0.9.12.ebuild 3321
-MISC ChangeLog 5372 RMD160 30194e551fdcc79bc67cf043e91804d69c27aee5 SHA1 f1abced28d6d85f496e814d118c15650180b35b9 SHA256 8b2f0d51d2e85a4a671410dd469555348842166cfe119b726acae02ae92d8df5
-MD5 26fd3f9975239b535bef31f3b120d154 ChangeLog 5372
-RMD160 30194e551fdcc79bc67cf043e91804d69c27aee5 ChangeLog 5372
-SHA256 8b2f0d51d2e85a4a671410dd469555348842166cfe119b726acae02ae92d8df5 ChangeLog 5372
+MISC ChangeLog 5470 RMD160 abec289d2c162ebeca7785530f77314d8277e1c1 SHA1 3cded328ccb49fe8bbddbb6e802772338ec0e2b4 SHA256 4ce7c713df99d342341e0e85a61568d566cf1ff8dc6a5e9ec2e4c72d0ede1b79
+MD5 fed667c13118d74acb57a2f675e44afe ChangeLog 5470
+RMD160 abec289d2c162ebeca7785530f77314d8277e1c1 ChangeLog 5470
+SHA256 4ce7c713df99d342341e0e85a61568d566cf1ff8dc6a5e9ec2e4c72d0ede1b79 ChangeLog 5470
 MISC metadata.xml 223 RMD160 eb1d7f78c4800a9e0b74e5d99b83a17d0eb247be SHA1 3be3a7139f7e71b712959fb7465f73d1bcb6ba07 SHA256 8c4b3cde4b0d254edca1f695296876df4ac96ca844d68e8152cfc5f6dbe39792
 MD5 5cf11c08544b065d0144e11273f0000d metadata.xml 223
 RMD160 eb1d7f78c4800a9e0b74e5d99b83a17d0eb247be metadata.xml 223
@@ -54,9 +54,9 @@ MD5 db772c71b76665fd2abc51c1f6866e41 files/digest-gtk2hs-0.9.12.1 250
 RMD160 fa144b887129bfb078c3a4188813be6479f69a17 files/digest-gtk2hs-0.9.12.1 250
 SHA256 8f0312288f457afd61ab1f19d6398bc36f6415629ca29f2f295ba9dd7cc44211 files/digest-gtk2hs-0.9.12.1 250
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.7 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHYICInUVyUObPUL4RAqtkAJ4+jPKJKYItQMypdABsEp14B1sYlwCgl7YE
-OKyhwJZcH19oF/IqzrprTl8=
-=13j0
+iD8DBQFHiATJkKaRLQcq0GIRAiKSAJ4iMv8hYlXkYuW2HsyLDyaNFrDKWQCgitKI
+II80ZCCHRjBIP2o1apF+Ic4=
+=npb1
 -----END PGP SIGNATURE-----
